--- a/gdpopup.html
+++ b/gdpopup.html
@@ -7,10 +7,10 @@
   </head>
   <body  style="width: 730px; height: 30px;" width="730" height="30">
     <div class="appHeader">
-      <div class="footer">GoodData for Chrome v0.5  MHA &amp; <a href="http://www.gooddata.com" id="hiddenLink">GoodData</a></div>
+      <div class="footer">GoodData for Chrome v0.6  MHA &amp; <a href="http://www.gooddata.com" id="hiddenLink">GoodData</a></div>
       <div class="options"><a href="#" id="optLink" target="_new">+</a></div>
       <!--div class="options options2"><a href="#" id="reload">⟲</a></div-->
-      <!--div class="options options3"><a href="#" id="something">?</a></div--> 
+      <div class="options options3" id="console"><a href="https://${SERVER}/admin/dataload/" id="dataload">DL</a></div> 
 
       <a id="dashboard" href="https://${SERVER}/#s=/gdc/projects/${PID}|projectDashboardPage|" class="logoButton"></a>
       <!--div>Project ${PID}</div-->
