--- a/options.html
+++ b/options.html
@@ -20,7 +20,7 @@
       ]
     ],
     "extension info" : {
-      "version" : "0.5",
+      "version" : "0.6",
       "update_url" : "<a href="https://confluence.gooddata.com/confluence/x/NQdvBw">https://confluence.gooddata.com/confluence/x/NQdvBw</a>",
       "update mode" : "manual"
     }
@@ -375,6 +375,14 @@
         </select>
         <br>    
       </fieldset>   
+
+    <fieldset>
+      <legend>CloudConnect logs:</legend>
+      <label><input type="checkbox" id="dont_parse_cc_logs" value="1">Do NOT parse CloudConnect logs</label>
+
+    </fieldset>
+
+
 </div>
 
 <div class="submit">
