--- a/gdpopup.html
+++ b/gdpopup.html
@@ -5,9 +5,9 @@
     <script src="popup.js"></script>
     <link rel="stylesheet" type="text/css" href="popup.css" /> 
   </head>
-  <body  style="width: 730px; height: 30px;" width="730" height="30">
+  <body  style="width: 730px; height: 30px;" width="730" height="40">
     <div class="appHeader">
-      <div class="footer">GoodData for Chrome v0.6  MHA &amp; <a href="http://www.gooddata.com" id="hiddenLink">GoodData</a></div>
+      <!--div class="footer">GoodData for Chrome v0.6  MHA &amp; <a href="http://www.gooddata.com" id="hiddenLink">GoodData</a></div-->
       <div class="options"><a href="#" id="optLink" target="_new">+</a></div>
       <!--div class="options options2"><a href="#" id="reload">⟲</a></div-->
       <div class="options options3" id="console"><a href="https://${SERVER}/admin/dataload/" id="dataload">DL</a></div> 
@@ -24,7 +24,7 @@
       <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/" id="md">MD</a>
       <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/query" id="query">Query</a>
       <a class="needpid" href="https://${SERVER}/#s=/gdc/projects/${PID}|dataPage|ldmModel" id="model">LDM</a>
-      <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/ldm/manage" id="mng">Mng</a>
+      <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/ldm/manage2" id="mng">Mng</a>
       <span class="spacer"></span> 
       <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/validate" id="validate">Validate</a>
       <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/maintenance/export" id="export">Exp</a>
