--- a/gdpopup.html
+++ b/gdpopup.html
@@ -1,3 +1,27 @@
+<!--
+/*
+ * Copyright (c) 2013, GoodData Corporation. All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without modification, are permitted provided
+ * that the following conditions are met:
+ *
+ *     * Redistributions of source code must retain the above copyright notice, this list of conditions and
+ *        the following disclaimer.
+ *     * Redistributions in binary form must reproduce the above copyright notice, this list of conditions
+ *        and the following disclaimer in the documentation and/or other materials provided with the distribution.
+ *     * Neither the name of the GoodData Corporation nor the names of its contributors may be used to endorse
+ *        or promote products derived from this software without specific prior written permission.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS
+ * OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY
+ * AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
+ * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
+ * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+ * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+ * WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+ * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ */
+-->
 <html style="width: 730px; height: 30px;" width="730" height="30">
   <head>
     <meta charset="UTF-8">
@@ -26,12 +50,13 @@
       <a class="needpid" href="https://${SERVER}/#s=/gdc/projects/${PID}|dataPage|ldmModel" id="model">LDM</a>
       <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/ldm/manage2" id="mng">Mng</a>
       <span class="spacer"></span> 
-      <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/validate" id="validate">Validate</a>
+      <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/validate" id="validate">Valid</a>
       <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/maintenance/export" id="export">Exp</a>
       <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/maintenance/import" id="import">Imp</a> 
       <span class="spacer"></span>  
+      <a class="needpid" href="${WEBDAV_PATH}" id="data">Data</a>
       <a class="needpid" href="https://${SERVER}/gdc/projects/${PID}/dataload/processes" id="transformations">ETL</a>
-      <a class="needpid" href="https://${SERVER}/gdc/projects/${PID}/schedules" id="schedules">Schedule</a>
+      <a class="needpid" href="https://${SERVER}/gdc/projects/${PID}/schedules" id="schedules">Sched</a>
       <span class="spacer"></span>        
       <a class="needpid" href="https://${SERVER}/gdc/projects/${PID}/schedules" id="something">?</a>
     </div>
