--- a/gdpopup.html
+++ b/gdpopup.html
@@ -32,35 +32,33 @@
   <body  style="width: 730px; height: 30px;" width="730" height="40">
     <div class="appHeader">
       <!--div class="footer">GoodData for Chrome v0.6  MHA &amp; <a href="http://www.gooddata.com" id="hiddenLink">GoodData</a></div-->
-      <div class="options"><a href="#" id="optLink" target="_new">+</a></div>
+      <div class="options"><a href="#" id="optLink" target="_new" title="Configure this extension">+</a></div>
       <!--div class="options options2"><a href="#" id="reload">⟲</a></div-->
-      <div class="options options3" id="console"><a href="https://${SERVER}/admin/dataload/" id="dataload">DL</a></div> 
+      <div class="options options3" id="console"><a href="https://${SERVER}/admin/dataload/" id="dataload" title="Go to Data Loading console">DL</a></div> 
 
-      <a id="dashboard" href="https://${SERVER}/#s=/gdc/projects/${PID}|projectDashboardPage|" class="logoButton"></a>
+      <a id="dashboard" href="https://${SERVER}/#s=/gdc/projects/${PID}|projectDashboardPage|" class="logoButton" title="Go to project dashboard"></a>
       <!--div>Project ${PID}</div-->
       <div id="navigation">
-      <a href="https://${SERVER}/gdc/projects/" id="new_project">New</a>
-      <a href="https://${SERVER}/gdc/md/" id="project_list">List</a>
+      <a href="https://${SERVER}/gdc/projects/" id="new_project" title="Create new project">New</a>
+      <a href="https://${SERVER}/gdc/md/" id="project_list" title="Show list of all projects available to current user">List</a>
       <span class="spacer"></span>      
-      <a class="needpid needobj" href="https://${SERVER}${OBJURL}" id="object">Obj</a>
-      <span class="spacer"></span>        
-      <a class="needpid" href="https://${SERVER}/gdc/projects/${PID}/" id="project">Project</a>
-      <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/" id="md">MD</a>
-      <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/query" id="query">Query</a>
-      <a class="needpid" href="https://${SERVER}/#s=/gdc/projects/${PID}|dataPage|ldmModel" id="model">LDM</a>
-      <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/ldm/manage2" id="mng">Mng</a>
+      <a class="needpid needobj" href="https://${SERVER}${OBJURL}" id="object" title="Toggle between GUI and API display of objects">Obj</a><sub><a class="subnav" href="https://${SERVER}${OBJURL}/explain2?type=oqt_dot&amp;format=html&amp;submit=submit" id="explain" title="Explain calculation of report">EX</a></sub>
+      <span class="spacer"></span>
+      <a class="needpid" href="https://${SERVER}/gdc/projects/${PID}/" id="project" title="Basic project information">Proj</a>
+      <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/" id="md" title="Project Metadata">MD</a>
+      <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/query" id="query" title="Listing resources within project by type">Query</a>
+      <a class="needpid" href="https://${SERVER}/#s=/gdc/projects/${PID}|dataPage|ldmModel" id="model" title="Logical Data Model of a project (image)">LDM</a>
+      <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/ldm/manage2" id="mng" title="Execute MAQL to modify project LDM">Mng</a>
       <span class="spacer"></span> 
-      <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/validate" id="validate">Valid</a>
-      <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/maintenance/export" id="export">Exp</a>
-      <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/maintenance/import" id="import">Imp</a> 
+      <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/validate" id="validate" title="Validation of project structure and data">Valid</a>
+      <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/maintenance/export" id="export" title="Export project to create a copy">Exp</a><sub><a class="needpid subnav" href="https://${SERVER}/gdc/md/${PID}/maintenance/partialmdexport" id="md_export" title="Export dashboard/metric/report to import it to another project">MD</a></sub>
+      <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/maintenance/import" id="import" title="Import previously exported project to blank project">Imp</a><sub><a class="needpid subnav" href="https://${SERVER}/gdc/md/${PID}/maintenance/partialmdimport" id="md_import" title="Import previously exported dashboard/metric/report">MD</a></sub>
       <span class="spacer"></span>  
-      <a class="needpid" href="${WEBDAV_PATH}" id="data">Data</a>
-      <a class="needpid" href="https://${SERVER}/gdc/projects/${PID}/dataload/processes" id="transformations">ETL</a>
-      <a class="needpid" href="https://${SERVER}/gdc/projects/${PID}/schedules" id="schedules">Sched</a>
+      <a class="needpid" href="${WEBDAV_PATH}" id="data" title="Go to project-specific WebDav directory">Data</a>
+      <a class="needpid" href="https://${SERVER}/gdc/projects/${PID}/dataload/processes" id="transformations" title="ETL processes within a project">ETL</a>
+      <a class="needpid" href="https://${SERVER}/gdc/projects/${PID}/schedules" id="schedules" title="ETL Schedules within a project">Schd</a>
       <span class="spacer"></span>        
-      <a class="needpid" href="https://${SERVER}/gdc/projects/${PID}/schedules" id="something">?</a>
+      <a class="needpid" href="#" id="something" title="Useful Project Information">?</a>
     </div>
 </body>
 </html>
-
-
