--- a/options.html
+++ b/options.html
@@ -64,7 +64,7 @@
     <fieldset>
       <legend>Default Icon:</legend>
       <select id="default_icon">
-<option value="icons/gd19_blue.png">default icon</option>
+<option value="icons/default.png">default icon</option>
 <option value="" disabled>New GoodData "G"</option>
 <option value="icons/gd19_rebrand_black.png">GoodData in Black</option>
 <option value="icons/gd19_rebrand_gray.png">GoodData in Gray</option>
@@ -107,7 +107,7 @@
       <span class="detail">hostname regexp</span><br>
       <input id="alt_host_regexp1" value="" />
         <select id="alt_host_icon1">
-<option value="icons/gd19_blue.png">default icon</option>          
+<option value="icons/default.png">default icon</option>          
 <option value="" disabled>New GoodData "G"</option>
 <option value="icons/gd19_rebrand_black.png">GoodData in Black</option>
 <option value="icons/gd19_rebrand_gray.png">GoodData in Gray</option>
@@ -142,7 +142,7 @@
         <br>
       <input id="alt_host_regexp2" value="" />
         <select id="alt_host_icon2">
-<option value="icons/gd19_blue.png">default icon</option>          
+<option value="icons/default.png">default icon</option>          
 <option value="" disabled>New GoodData "G"</option>
 <option value="icons/gd19_rebrand_black.png">GoodData in Black</option>
 <option value="icons/gd19_rebrand_gray.png">GoodData in Gray</option>
@@ -177,7 +177,7 @@
         <br> 
       <input id="alt_host_regexp3" value="" />
         <select id="alt_host_icon3">
-<option value="icons/gd19_blue.png">default icon</option>          
+<option value="icons/default.png">default icon</option>          
 <option value="" disabled>New GoodData "G"</option>
 <option value="icons/gd19_rebrand_black.png">GoodData in Black</option>
 <option value="icons/gd19_rebrand_gray.png">GoodData in Gray</option>
@@ -212,7 +212,7 @@
         <br> 
       <input id="alt_host_regexp4" value="" />
         <select id="alt_host_icon4">
-<option value="icons/gd19_blue.png">default icon</option>          
+<option value="icons/default.png">default icon</option>          
 <option value="" disabled>New GoodData "G"</option>
 <option value="icons/gd19_rebrand_black.png">GoodData in Black</option>
 <option value="icons/gd19_rebrand_gray.png">GoodData in Gray</option>
@@ -247,7 +247,7 @@
         <br>         
       <input id="alt_host_regexp5" value="" />
         <select id="alt_host_icon5">
-<option value="icons/gd19_blue.png">default icon</option>          
+<option value="icons/default.png">default icon</option>          
 <option value="" disabled>New GoodData "G"</option>
 <option value="icons/gd19_rebrand_black.png">GoodData in Black</option>
 <option value="icons/gd19_rebrand_gray.png">GoodData in Gray</option>
@@ -286,7 +286,7 @@
       <span class="detail">PID</span><br>
       <input type="text" id="alt_pid1" value="" /> 
         <select id="alt_pid_icon1">
-<option value="icons/gd19_blue.png">default icon</option>          
+<option value="icons/default.png">default icon</option>          
 <option value="" disabled>New GoodData "G"</option>
 <option value="icons/gd19_rebrand_black.png">GoodData in Black</option>
 <option value="icons/gd19_rebrand_gray.png">GoodData in Gray</option>
@@ -321,7 +321,7 @@
         <br>
       <input type="text" id="alt_pid2" value="" /> 
         <select id="alt_pid_icon2">
-<option value="icons/gd19_blue.png">default icon</option>          
+<option value="icons/default.png">default icon</option>          
 <option value="" disabled>New GoodData "G"</option>
 <option value="icons/gd19_rebrand_black.png">GoodData in Black</option>
 <option value="icons/gd19_rebrand_gray.png">GoodData in Gray</option>
@@ -356,7 +356,7 @@
         <br>  
       <input type="text" id="alt_pid3" value="" /> 
         <select id="alt_pid_icon3">
-<option value="icons/gd19_blue.png">default icon</option>          
+<option value="icons/default.png">default icon</option>          
 <option value="" disabled>New GoodData "G"</option>
 <option value="icons/gd19_rebrand_black.png">GoodData in Black</option>
 <option value="icons/gd19_rebrand_gray.png">GoodData in Gray</option>
@@ -391,7 +391,7 @@
         <br>  
       <input type="text" id="alt_pid4" value="" /> 
         <select id="alt_pid_icon4">
-<option value="icons/gd19_blue.png">default icon</option>          
+<option value="icons/default.png">default icon</option>          
 <option value="" disabled>New GoodData "G"</option>
 <option value="icons/gd19_rebrand_black.png">GoodData in Black</option>
 <option value="icons/gd19_rebrand_gray.png">GoodData in Gray</option>
@@ -426,7 +426,7 @@
         <br>          
       <input type="text" id="alt_pid5" value="" /> 
         <select id="alt_pid_icon5">
-<option value="icons/gd19_blue.png">default icon</option>          
+<option value="icons/default.png">default icon</option>          
 <option value="" disabled>New GoodData "G"</option>
 <option value="icons/gd19_rebrand_black.png">GoodData in Black</option>
 <option value="icons/gd19_rebrand_gray.png">GoodData in Gray</option>
