--- a/gd_help.html
+++ b/gd_help.html
@@ -53,10 +53,10 @@
       </p>
 
       <p>
-        <a href="#" id="object" title="Toggle between GUI and API display of objects">Obj</a><sub><a class="subnav disabled" href="#">EX</a></sub><span class="hlp_desc">Toggle between GUI and API display of objects (only for selected types of objects) / display object definition on gray page <span class="gp">/gdc/md/PID/obj/OBJ_ID</span></span>
+        <a href="#" title="Toggle between GUI and API display of objects">Obj</a><sub><a class="subnav disabled" href="#">EX</a></sub><span class="hlp_desc">Toggle between GUI and API display of objects (only for selected types of objects) / display object definition on gray page <span class="gp">/gdc/md/PID/obj/OBJ_ID</span></span>
       </p>
       <p>
-        <a href="#" id="object" class="disabled">Obj</a><sub><a class="subnav" href="#" title="Explain calculation of report">EX</a></sub><span class="hlp_desc">Explain calculation of last saved version of particular report (only for reports) / find latest reportDefinition and run <span class="gp">/gdc/md/obj/OBJ_ID/explain2</span> for it. Additional features of explain2 resource is described in <a class="dev_link" href="http://developer.gooddata.com/blog/advanced-report-definition-tools">Advanced Report Definition Tools</a>.</span>
+        <a href="#" class="disabled">Obj</a><sub><a class="subnav" href="#" title="Explain calculation of report">EX</a></sub><span class="hlp_desc">Explain calculation of last saved version of particular report (only for reports) / find latest reportDefinition and run <span class="gp">/gdc/md/obj/OBJ_ID/explain2</span> for it. Additional features of explain2 resource is described in <a class="dev_link" href="http://developer.gooddata.com/blog/advanced-report-definition-tools">Advanced Report Definition Tools</a>.</span>
       </p>
 
       <p>
@@ -70,10 +70,10 @@
       </p>
 
       <p>
-        <a href="#" id="model" title="Logical Data Model of a project (image)">LDM</a><sub><a class="subnav disabled" href="#">LAB</a></sub><span class="hlp_desc">Display generated Logical Data Model of a project (same as in Manage - Model)</span>
+        <a href="#" title="Logical Data Model of a project (image)">LDM</a><sub><a class="subnav disabled" href="#">LAB</a></sub><span class="hlp_desc">Display generated Logical Data Model of a project (same as in Manage - Model)</span>
       </p>
       <p>
-        <a href="#" id="model" class="disabled">LDM</a><sub><a class="subnav" href="#" title="Logical Data Model of last UI selected project in new LABS application">LAB</a></sub><span class="hlp_desc">Display interactive Logical Data Model of last project accessed in UI within experimental LABS application<sup>(*)</sup>.</span>
+        <a href="#" class="disabled">LDM</a><sub><a class="subnav" href="#" title="Logical Data Model of last UI selected project in new LABS application">LAB</a></sub><span class="hlp_desc">Display interactive Logical Data Model of last project accessed in UI within experimental LABS application<sup>(*)</sup>.</span>
       </p>
       
       <p>
@@ -85,16 +85,16 @@
       </p>
 
       <p>
-           <a href="#" id="export" title="Export project to create a copy">Exp</a><sub><a class="subnav disabled" href="#">MD</a></sub><span class="hlp_desc">Perform full project export on gray page <span class="gp">/gdc/md/PID/maintenance/export</span> as described in article <a class="dev_link" href="http://developer.gooddata.com/article/project-cloning">Project Cloning</a><sup>(*)</sup></span>
+           <a href="#" title="Export project to create a copy">Exp</a><sub><a class="subnav disabled" href="#">MD</a></sub><span class="hlp_desc">Perform full project export on gray page <span class="gp">/gdc/md/PID/maintenance/export</span> as described in article <a class="dev_link" href="http://developer.gooddata.com/article/project-cloning">Project Cloning</a><sup>(*)</sup></span>
       </p>
       <p>
-           <a href="#" id="export"  class="disabled">Exp</a><sub><a class="subnav" href="#" title="Export dashboard/metric/report to import it to another project">MD</a></sub><span class="hlp_desc">Perform partial metadata export on gray page <span class="gp">/gdc/md/PID/maintenance/partialmdexport</span> as described in article <a class="dev_link" href="http://developer.gooddata.com/article/migrating-selected-objects-between-projects">Migrating Selected Objects between Projects</a><sup>(*)</sup></span>
+           <a href="#" class="disabled">Exp</a><sub><a class="subnav" href="#" title="Export dashboard/metric/report to import it to another project">MD</a></sub><span class="hlp_desc">Perform partial metadata export on gray page <span class="gp">/gdc/md/PID/maintenance/partialmdexport</span> as described in article <a class="dev_link" href="http://developer.gooddata.com/article/migrating-selected-objects-between-projects">Migrating Selected Objects between Projects</a><sup>(*)</sup></span>
       </p>
       <p>
-        <a href="#" id="import" title="Import previously exported project to blank project">Imp</a><sub><a class="subnav disabled" href="#">MD</a></sub><span class="hlp_desc">Perform full project import from previously exported project into new blank project using gray page <span class="gp">/gdc/md/PID/maintenance/import</span> as described in article <a class="dev_link" href="http://developer.gooddata.com/article/project-cloning">Project Cloning</a><sup>(*)</sup></span>
+        <a href="#" title="Import previously exported project to blank project">Imp</a><sub><a class="subnav disabled" href="#">MD</a></sub><span class="hlp_desc">Perform full project import from previously exported project into new blank project using gray page <span class="gp">/gdc/md/PID/maintenance/import</span> as described in article <a class="dev_link" href="http://developer.gooddata.com/article/project-cloning">Project Cloning</a><sup>(*)</sup></span>
       </p>
       <p>
-        <a class="disabled" href="#" id="import">Imp</a><sub><a class="subnav" href="#" title="Import previously exported dashboard/metric/report">MD</a></sub><span class="hlp_desc">Perform import of previously exported metadata using gray page <span class="gp">/gdc/md/PID/maintenance/partialmdimport</span> as described in article <a class="dev_link" href="http://developer.gooddata.com/article/migrating-selected-objects-between-projects">Migrating Selected Objects between Projects</a><sup>(*)</sup></span>
+        <a class="disabled" href="#">Imp</a><sub><a class="subnav" href="#" title="Import previously exported dashboard/metric/report">MD</a></sub><span class="hlp_desc">Perform import of previously exported metadata using gray page <span class="gp">/gdc/md/PID/maintenance/partialmdimport</span> as described in article <a class="dev_link" href="http://developer.gooddata.com/article/migrating-selected-objects-between-projects">Migrating Selected Objects between Projects</a><sup>(*)</sup></span>
       </p>
 
       <p>
@@ -180,7 +180,7 @@
 </div>
 
   <h2>The Log Parser<sup>(*)</sup></h2>
-<p class="help_div">The Log Parser appears when a CloudConenct Log is detected.</p>
+<p class="help_div">The Log Parser appears when a CloudConnect Log is detected.</p>
 <p class="help_div">It allows you to clearly see where are errors an warnings and hide some information that is not so important.</p>
 <p class="help_div">In case of error it automatically scrolls to that line. Otherwise it scrolls to last line.</p>
 <p class="help_div">You can manually refresh the log with the Refresh link (it will keep your display settings).</p>
@@ -189,7 +189,25 @@
 <p class="help_div">When the graph is still running, you can check the box next to Reload link to automatically refresh it every 5 minutes. If it then finishes and the window is not focused, you will be informed by desktop notification.</p>
 <p class="help_div">You can disable parsing of the log files in extension options (in case it is too slow on your computer or you just want to see the raw logs).</p> 
 
-<div id="cc_head">    <span class="cc_head_links"><span class="graph_name"><i>[Graph Name]</i></span>    <span class="graph_run_time">runtime: [Elapsed Runtime]</span><a class="cc_head_link goto_error" href="#">Go to error</a> <a class="cc_head_link goto_err_data" href="#">Get Data</a>    <a class="run_refresh" href="#">Reload</a><input type="checkbox" title="Reload every 5 minutes" id="auto_refresh">    <a class="cc_head_link close" href="#" xtarget="_blank" title="Show original log">X</a>    </span>    <div class="cc_head_labels">    <label class="cc_head_label cc_head_label_first"> RequestID</label>    <label class="cc_head_label"><input type="checkbox"> WatchDog</label>    <label class="cc_head_label"><input type="checkbox" checked="checked"> DEBUG</label>    <label class="cc_head_label"><input type="checkbox" checked="checked"> INFO</label>    <label class="cc_head_label"><input type="checkbox" checked="checked"> WARN</label>    <label class="cc_head_label"><input type="checkbox" checked="checked"> ERROR</label></div>    </div>
+<div id="cc_head">
+    <span class="cc_head_links">
+        <span class="graph_name"><i>[Graph Name]</i></span>
+        <span class="graph_run_time">runtime: [Elapsed Runtime]</span>
+        <a class="cc_head_link goto_error" href="#">Go to error</a>
+        <a class="cc_head_link goto_err_data" href="#">Get Data</a>
+        <a class="run_refresh" href="#">Reload</a>
+        <input type="checkbox" title="Reload every 5 minutes" id="auto_refresh">
+        <a class="cc_head_link close" href="#" xtarget="_blank" title="Show original log">X</a>
+    </span>
+    <div class="cc_head_labels">
+        <label class="cc_head_label cc_head_label_first"> RequestID</label>
+        <label class="cc_head_label"><input type="checkbox"> WatchDog</label>
+        <label class="cc_head_label"><input type="checkbox" checked="checked"> DEBUG</label>
+        <label class="cc_head_label"><input type="checkbox" checked="checked"> INFO</label>
+        <label class="cc_head_label"><input type="checkbox" checked="checked"> WARN</label>
+        <label class="cc_head_label"><input type="checkbox" checked="checked"> ERROR</label>
+    </div>
+</div>
 
 <h2>The Options</h2>
 <p class="help_div">You can change the default GoodData Extension icon in the extension options.</p>
@@ -207,7 +225,7 @@
     <li>Removed query engine and cluster from The Overlay</li>
     <li>Added project timezone to The Overlay</li>
     <li>Automatically go to last line (first error) in The Log Parser</li>
-    <li>Automatically refresh log in 5 minutes if enabled + desktop notifiation when the process finishes</li>
+    <li>Automatically refresh log in 5 minutes if enabled + desktop notification when the process finishes</li>
     <li>Added this help</li>
     <li>Added install/upgrade notification</li>
     <li>Fixed some minor bugs</li>
