--- a/gd_help.html
+++ b/gd_help.html
@@ -195,10 +195,11 @@
 <p class="help_div">You can change the default GoodData Extension icon in the extension options.</p>
 <p class="help_div">You can set alternate icons for different projects or hostnames.</p>
 <p class="help_div">To enable the extension od hostnames other than *.gooddata.com (i.e. whitelabeled) add the hostname to "whitelabeled hostnames" section.</p>
+<p class="help_div">You can add custom magic button for your favourite GoodData resource. E.g. title = "Valid", popup help = "Validation of project", link = "https://${SERVER}/gdc/md/${PID}/validate" (or "https://${SERVER}${OBJURL}/explain2")</p>
 <div class="end"></div>
 <a name="changelog"></a>
 <h2>What's new</h2>
-<p>v0.7500b:
+<p>v0.750*:
   <ul>
     <li>New icon and design to match GoodData new branding</li>
     <li>Links to partial MD export and import in The Toolbar</li>
@@ -210,6 +211,7 @@
     <li>Automatically refresh log in 5 minutes if enabled + desktop notifiation when the process finishes</li>
     <li>Added this help</li>
     <li>Added install/upgrade notification</li>
+    <li>Added customizable magic button</li>
     <li>Fixed some minor bugs</li>
   </ul>
 </p>
