--- a/gdpopup.html
+++ b/gdpopup.html
@@ -57,8 +57,10 @@
       <a class="needpid" href="${WEBDAV_PATH}" id="data" title="Go to project-specific WebDav directory">Data</a>
       <a class="needpid" href="https://${SERVER}/gdc/projects/${PID}/dataload/processes" id="transformations" title="ETL processes within a project">ETL</a>
       <a class="needpid" href="https://${SERVER}/gdc/projects/${PID}/schedules" id="schedules" title="ETL Schedules within a project">Schd</a>
-      <span class="spacer"></span>        
+      <span class="spacer" id="last-spacer"></span>
       <a class="needpid" href="#" id="something" title="Useful Project Information">ℹ</a>
     </div>
+    </div>
+<script src="gdpopup.js"></script>
 </body>
 </html>
