--- a/options.html
+++ b/options.html
@@ -481,7 +481,17 @@
 
     </fieldset>
 
-
+    <fieldset>
+        <legend>Magic button:</legend>
+        <div class="detail">You can add custom button - e.g.:<br>
+            &emsp; Title: Valid<br>
+            &emsp; Popup help: Validation of project<br>
+            &emsp; Link: https://${SERVER}/gdc/md/${PID}/validate
+        </div><br>
+        <label for="magic_title">Title: </label><input type="text" id="magic_title" maxlength="6"><br>
+        <label for="magic_help">Popup help: </label><input type="text" id="magic_help"><br>
+        <label for="magic_link">Link: </label><input type="text" id="magic_link"><br>
+    </fieldset>
 
 </div>
 
