--- a/gdpopup.html
+++ b/gdpopup.html
@@ -34,7 +34,7 @@
       <div class="footer"><a href="http://www.gooddata.com" id="hiddenLink">GoodData</a></div>
       <div class="options"><a href="#" id="optLink" target="_new" title="Configure this extension"> + </a></div>
       <div class="options options2"><a href="#" id="hlpLink" target="_new">?</a></div>
-      <div class="options options3" id="console"><a href="https://${SERVER}/admin/dataload/" id="dataload" title="Go to Data Loading console">DL</a></div> 
+      <div class="options options3" id="console"><a href="https://${SERVER}/admin/disc/" id="dataload" title="Go to Data Integration Service Console">DL</a></div> 
 
       <a id="dashboard" href="https://${SERVER}/#s=/gdc/projects/${PID}|projectDashboardPage|" class="logoButton" title="Go to project dashboard"></a>
       <!--div>Project ${PID}</div-->
@@ -56,7 +56,7 @@
       <span class="spacer"></span>  
       <a class="needpid" href="${WEBDAV_PATH}" id="data" title="Go to project-specific WebDav directory">Data</a>
       <a class="needpid" href="https://${SERVER}/gdc/projects/${PID}/dataload/processes" id="transformations" title="ETL processes within a project">ETL</a>
-      <a class="needpid" href="https://${SERVER}/gdc/projects/${PID}/schedules" id="schedules" title="ETL Schedules within a project">Schd</a>
+      <a class="needpid" href="https://${SERVER}/admin/disc/#/projects/${PID}" id="schedules" title="ETL Schedules within a project">Sch</a><sub><a class="needpid subnav" href="https://${SERVER}/gdc/projects/${PID}/schedules" id="schedules_gp" title="ETL Schedules within a project (show in Gray Pages)">GP</a></sub>
       <span class="spacer" id="last-spacer"></span>
       <a class="needpid" href="#" id="something" title="Useful Project Information">ℹ</a>
     </div>
